go over basics setup

--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello World
+---
+# front matter tells jekyll to process liquid
+layout: default
+title: OptoFab
+---
+
+<h1>{{ "Hello World!" | downcase }}</h1>
